fixed the hover over tooltip alignment by making the position relative

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body, html {
 a {
     color: #fff;
 }
+
 .fa {
     font-size:50px;
 }
@@ -19,12 +20,12 @@ ul {
     margin: 0;
     padding: 0;
     display: flex;
-
 }
 
 ul li {
     display: inline;
-    list-style-type: none;
+    position: relative;
+    list-style: none;
     padding: 10px;
     text-align: center;
     width: 50px;
@@ -43,11 +44,31 @@ ul li span {
     position: absolute;
     top: -35px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(-15px);
     width: 120px;
     height: 24px;
     line-height: 24px;
-    background: #262626;
+    background: lightseagreen;
     font-size: 14px;
     border-radius: 4px;
+    transition: 0.5s;
+    visibility: hidden;
+    opacity: 0;
+}
+
+ul li:hover span {
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(-50%) translateY(0px);
+}
+ul li span:before {
+    content: '';
+    position: absolute;
+    bottom: -8px;
+    left: 50%;
+    transform: rotate(45deg) translateX(-50%);
+    width: 10px;
+    height: 10px;
+    background: lightseagreen;
+    z-index: -1;
 }
